테스트 보고서

--- a/보고서/테스트보고서.md
+++ b/보고서/테스트보고서.md
@@ -1,1 +1,33 @@
 # 테스트 보고서
+
+
+## UI 클래스(MainWindow)
+
+| Test Case 	| Target 	| Description 	| Results 	|
+|-----------	|--------	|-------------	|---------	|
+|     TC-01    	|playProgress|프로그레스바의 이벤트 설정을 수행 및 QThread.start() 함수 호출이 되는가          	|     Pass      |
+|     TC-02      	|onCountChanged|프로그레스바의 value 갱신 코드가 잘 작동되는가, value값이 100이 되었을 때 showDoneTutorial 함수가 제대로 호출 되는가         	|    Pass     	|
+|     TC-03      	|showDoneTutorial       |invisible 하게 설정했던 인식 결과창을 visible로 제대로 변환 하는가, 이미지 설정이 제대로 되는가        	|    Pass     	|
+|     TC-04      	|hideDoneTutorial   	|visible로 되어 있는 인식 결과창을 invisible로 제대로 변환 하는가         	|     Pass    	|
+|     TC-05      	|setTutorialButton   	|사용자가 배울려고 하는 글자 선택 버튼들의 이벤트와 이미지가 제대로 설정 되는가         	|    Pass     	|
+|     TC-06      	|notifyModeChanged   	|사용자가 배울려고 하는 모드의 설정이 정확한가          	|    Pass     	|
+|     TC-07     	|loadTutorialImageFromMode  |인식 ROI창 위에 오버레이 이미지들이 제대로 설정되는가          	|    Pass     	|
+|     TC-08      	|videoToFrame   	|      웹캠의 영상 프레임을 올바르게 가져오는가, ROI를 위한 사각형을 올바르게 프레임위에 Overlay 하는가, 프레임 드랍이 없는가, View 에 올바르게 프레임을 띄우는가       	|    Pass     	|
+|     TC-09      	|saveToPredictor   	|      이미지 내에서 손을 검출해 이진화를 올바르게 하는가, 이진화된 이미지를 64 X 64 이미지로 올바르게 downscaling 하는가, 이미지를 최종적으로 1.png에 올바르게 저장 및 Overwrite 하는가        	|     Pass    	|
+|     TC-10      	|updatePredictedResult   	|       predict 함수에서 올바르게 인식 결과를 받아 들인후 View 내 결과창에 반영하는가      	|    Pass     	|
+|     TC-11      	|video_thread   	|      스레드가 올바르게 작동하여 영상의 프레임 드랍이나 PyQt UI 스레드에 영향을 미치지 않는가       	|     Pass    	|
+
+### 프로그레스바 클래스(ProgressThread)
+
+| Test Case 	| Target 	| Description 	| Results 	|
+|-----------	|--------	|-------------	|---------	|
+|     TC-01       	| run   	|value 변경 이벤트 처리가 원활하게 이뤄지는가, 전역변수 count의 값을 활용할 때에 값이 스레드안에서 원활하게 변경되는가 | pass         	|
+
+## 수화 인식 모듈(Predictor)
+
+| Test Case 	| Target 	| Description 	| Results 	|
+|-----------	|--------	|-------------	|---------	|
+|      TC-01     	|     Predicator   	|      딥러닝 모듈 (ASLModel.h5) 파일이 올바르게 불러와 지는가       	|     Pass    	|
+|      TC-02     	|    Predicator    	|     인식해야할 이미지(1.png) 가 올바르게 불러와 지는가       	|     Pass    	|
+|      TC-03    	|    Predicator    	|      수화 손모양에 맞는 알파벳 글자가 올바르게 반환 되는가       	|     Pass    	|
+
