--- a/보고서/테스트보고서.md
+++ b/보고서/테스트보고서.md
@@ -17,7 +17,7 @@
 |     TC-10      	|updatePredictedResult   	|       predict 함수에서 올바르게 인식 결과를 받아 들인후 View 내 결과창에 반영하는가      	|    Pass     	|
 |     TC-11      	|video_thread   	|      스레드가 올바르게 작동하여 영상의 프레임 드랍이나 PyQt UI 스레드에 영향을 미치지 않는가       	|     Pass    	|
 
-### 프로그레스바 클래스(ProgressThread)
+## 프로그레스바 클래스(ProgressThread)
 
 | Test Case 	| Target 	| Description 	| Results 	|
 |-----------	|--------	|-------------	|---------	|
